--- a/romannumerals-docker/nginx/sites/romannumerals-app.local.conf
+++ b/romannumerals-docker/nginx/sites/romannumerals-app.local.conf
@@ -1,12 +1,12 @@
-upstream romannumerals-web{
-  server romannumerals-node:4200;
+upstream romannumerals-app{
+  server romannumerals-app:4200;
 }
 
 server {
 
   listen 80;
   listen [::]:80;
-  server_name romannumerals-web.local;
+  server_name romannumerals-app.local;
 
   location / {
     try_files $uri $uri/ @angular_app;
@@ -16,7 +16,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://romannumerals-web;
+    proxy_pass http://romannumerals-app;
   }
 
 }
