--- a/romannumerals-docker/nginx/sites/romannumerals.conf
+++ b/romannumerals-docker/nginx/sites/romannumerals.conf
@@ -1,13 +1,16 @@
 server {
-
     listen 80;
     index index.php index.html;
 
-    error_log  /var/log/nginx/error.log;
+    error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
-    server_name roman-numerals-api.local;
-    root /var/www/roman-numerals-api/public;
+    server_name romannumerals-api.local;
+    root /var/www/romannumerals-api/public;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -16,11 +19,5 @@ server {
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
-    }
-
 }
